--- a/SDSS Presentation/index.html
+++ b/SDSS Presentation/index.html
@@ -482,7 +482,7 @@ We found that in towns that the project leaders understood were off. For example
 ]
 
 .center[
-&lt;img src="images/version1.png" width="80%"/&gt;
+&lt;img src="images/Version1.png" width="80%"/&gt;
 ]
 
 ---
@@ -495,7 +495,7 @@ We found that in towns that the project leaders understood were off. For example
 ]
 
 .center[
-&lt;img src="images/version2.png" width="52%"/&gt;
+&lt;img src="images/Version2.png" width="52%"/&gt;
 ]
 
 ---
@@ -508,7 +508,7 @@ We found that in towns that the project leaders understood were off. For example
 ]
 
 .center[
-&lt;img src="images/version3.png" width="60%"/&gt;
+&lt;img src="images/Version3.png" width="60%"/&gt;
 ]
 
 ---
@@ -521,7 +521,7 @@ We found that in towns that the project leaders understood were off. For example
 ]
 
 .center[
-&lt;img src="images/version4.png" width="75%"/&gt;
+&lt;img src="images/Version4.png" width="75%"/&gt;
 ]
 
 ---
