--- a/SDSS Presentation/index.html
+++ b/SDSS Presentation/index.html
@@ -264,7 +264,7 @@ class:primary
 .large.emph[
 + Introduction to Rural Shrink Smart Project with Iowa State University and Open-Source Data Challenges
 
-+ Motivation - Why Dashboards?
++ Motivation - Why Use Dashboards?
 
 + Guiding Design Principles &amp; Dashboard Design Workflow 
 
@@ -272,7 +272,7 @@ class:primary
   + Using Guided Discovery Learning (GDL)
 
 + Dashboard Design Workflow 
-  + Feedback Loop (Active and Passive Methodologies)
+  + Feedback Loop (Active and Passive Data Collections)
 
 + Future Work
 ]
@@ -329,14 +329,14 @@ This material is based upon work supported by the National Science Foundation un
   + Survey response rates keep decreasing over time
 
 + There are objective measures of things that contribute to QOL available in public datasets
-.medium.emph[
+
   + School ratings
   + Town budgets for services
   + Access to medical care, shopping, etc.
   + Transportation trends
   + Demographic shifts
   + City level cooperative agreements with other government entities and NGOs
-]
+
 
 ---
 # Challenges
@@ -461,12 +461,12 @@ Our initial set of dashboard design principles are:
 --
 
 &lt;br&gt;
--  During the process, we found that schools, fire departments, post offices and hospitals were missing
+-  During the process, we found that schools, fire departments, post offices and hospitals were missing from our open-source data
 
 --
 
 &lt;br&gt;
--  Resulted in finding other open source datasets that were used for sanity checks along with adding information of missing data
+-  Resulted in finding other open-source data that were used for sanity checks along with adding information of missing data
     
 ???
 
@@ -608,6 +608,9 @@ class:primary
       + Frame (frame of content and frame of visual encoding)
 
 **Why?** Advantages of using NOVIS model includes a reproducible framework of understanding graphics.
+
+**Findings** The PCP in this study were found to be promising for novice users, when comparing to the Treemap and Chord Diagram. 
+
 &lt;br&gt;&lt;br&gt;
 [Reference Journal](https://ieeexplore.ieee.org/document/7192668)
 
@@ -672,9 +675,28 @@ class:inverse
 &lt;br&gt;
 &lt;br&gt;
 .center[
-# Dashboard Design Workflow - Feedback Loop 
-## Active &amp; Passive Data Collection
+# Dashboard Design Workflow - Feedback Loop (Actively &amp; Passively) 
 ]
+---
+# Dashboard Design WorkFlow (Feedback)
+
+## Background of User Feedback Questionnaire
+
+**Who?** [Young &amp; Kitchin](https://doi.org/10.1016/j.ijhcs.2020.102429) wrote "Creating design guidelines for building city dashboards from a user's perspectives"
+  
+**What?** To help summarize a users concerns,Young &amp; Kitchin utilize six main critiques, which are framed into questions.
+
+**How is this useful?** We will adapt these questions to better help the town leaders communicate clear feedback for our team to use. 
+
+**Experimentation** We will collect how the users are experiencing the app with these set questions:
++ Is the information the dashboard presents clear? &lt;i&gt;(Scope)&lt;/i&gt;
++ Is the dashboard easy to navigate? &lt;i&gt;(Usability)&lt;/i&gt;
++ Is the dashboard used in a socially responsible manner? &lt;i&gt;(Ethics)&lt;/i&gt;
++ Do you believe that you can trust the Rural Shrink Smart dashboard? &lt;i&gt;(Validity)&lt;/i&gt;
++ Do you find value in the Rural Shrink Smart dashboard? &lt;i&gt;(Utility)&lt;/i&gt;
+
+
+???
 
 ---
 # Dashboard Design WorkFlow (Feedback)
@@ -708,6 +730,9 @@ class:primary
 
 # Future Work
 
++ Comparatively look at the cities town leaders used to compare to other towns to the USDA rurality index classifications. [Rural-Urban Continuum Codes](https://www.ers.usda.gov/topics/rural-economy-population/rural-classifications/)
+  + If results are correlated, making an argument for a proxy
+  
 + Continue to incorporate feedback from town leaders. 
 &lt;br&gt;
 .center[
@@ -715,8 +740,7 @@ class:primary
 ]
 
 ???
-With six rural town leaders, we will have enough information needed to understand the usefulness of the dashboard from 
-
+With six rural town leaders, we will have enough information needed to understand the usefulness of the dashboard from town leaders that are working with us directly. The Rural-Urban Continuum Codes are released every 10 years. The most recent release was in 2013, the next release will be in 2023.
 ---
 class:inverse
 &lt;br&gt;
