--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">My Website</a>
+      <a class="navbar-brand" href="index.html">Denise Bradford's Website</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -266,11 +266,16 @@ $(document).ready(function () {
 in Statistics at the University of Nebraska - Lincoln. My research
 interests involve data science related to data collection, perception,
 and decision-making using graphics.</p>
-<p>Presentation Reference List: <a
-href="https://drbradford12.github.io/Presentations/SDSS%20Presentation">SDSS
-2022 Presentation</a> <a
-href="https://drbradford12.github.io/Presentations/Dissertation%20Presentation">Dissertation
+<p>Presentation Reference List:</p>
+<p><a href="https://drbradford12.github.io/SDSS%20Presentation">SDSS
+2022 Presentation</a></p>
+<p><a
+href="https://drbradford12.github.io/Dissertation%20Presentation">Dissertation
 Presentation</a></p>
+<p>STAT 585 Assignment List:</p>
+<p><a href="https://drbradford12.github.io/Quarto%20Blog">Quarto
+Blog</a></p>
+<p><a href="http://resume.github.io/?drbradford12">Github Resume</a></p>
 
 
 
